# tele-ai

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  audio-sources-archive.md  hardware.txt  pop-culture-phone-numbers.md  project-name-ideas.md
documentation/: freepbx-ai-integrations.md  freepbx-guide.md  huggingface-finetuning-research-2026.md  huggingface-model-research.md  huggingface-models-research-2024-2025.md  llm-upgrade-recommendations.md  local-voice-assistant-pipeline.md  network-configuration.md  payphone-naming-research.md  project-overview.md  raspberry-pi-5-ai-hat-2-access.md  raspberry-pi-5-ai-hat-2-models.md  raspberry-pi-5-ai-hat-2-whisper.md  raspberry-pi-5-ai-ml.md  raspberry-pi-5-camera-video.md  raspberry-pi-5-connectivity.md  raspberry-pi-5-docker.md  raspberry-pi-5-eink-displays.md  raspberry-pi-5-gpio.md  raspberry-pi-5-hardware.md  raspberry-pi-5-nvme-pcie.md  raspberry-pi-5-openwakeword.md  raspberry-pi-5-overview.md  raspberry-pi-5-piper-tts.md  raspberry-pi-5-power-cooling.md  small-llm-research-2026.md
payphone-app/: .env.example  HARDWARE_TEST_PLAN.md  README.md  SETUP.md  install.sh  main.py  pyproject.toml  tts-server.service  tts_server.py  wyoming-whisper.service
payphone-app/config/: __init__.py  phone_directory.py  prompts.py  settings.py
payphone-app/core/: __init__.py  audio_processor.py  audiosocket.py  phone_router.py  pipeline.py  session.py  state_machine.py
payphone-app/features/: __init__.py  base.py  jokes.py  operator.py  registry.py
payphone-app/scripts/: download_hailo_models.py  generate_audio.py
payphone-app/services/: __init__.py  llm.py  stt.py  tts.py  vad.py  wyoming_whisper_server.py
payphone-app/tests/: __init__.py  test_all_numbers.py  test_core_components.py  test_phone_routing.py
planning/: features-list.md  phone-book-content.md  plan-improvements.md  system-architecture.md
reports/: company-report-glean.md
research/: iconic-telephone-services-1980s-1990s.md  stt-edge-models-2026.md  voice-pipeline-models-2026.md
scripts/: README.md  health-monitor.py  health-monitor.service  install-ops.sh  ops.conf.example  payphone-ops.sh  quick-health.sh
scripts/asterisk/: extensions_payphone.conf  extensions_ready.conf
