[project]
name = "payphone-app"
version = "0.1.0"
description = "AI-powered payphone voice pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.2.1",
    # Note: silero-vad is loaded via torch.hub at runtime, not via pip.
    # torch must be installed separately: pip install torch --index-url https://download.pytorch.org/whl/cpu
    "ollama>=0.6.0",
    "kokoro-onnx>=0.3.7",
    "numpy>=1.24",
    "scipy>=1.10",
    "soundfile>=0.12",
    "pydantic-settings>=2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
# For remote TTS client (Pi #1 calling Pi #2)
remote-tts = [
    "aiohttp>=3.9.0",
]
# For TTS server (run on Pi #2)
tts-server = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]
# For Hailo Whisper Wyoming server (Pi #1 with AI HAT+ 2)
# Note: hailo_platform comes from system package python3-h10-hailort, not pip.
# transformers provides WhisperTokenizer for decoding.
hailo-whisper = [
    "transformers>=4.48",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
